Bug 254363 - Scheduled Transactions - not all will enter automatically after one transaction is "ignored"
Summary: Scheduled Transactions - not all will enter automatically after one transacti...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-16 13:27 UTC by Brian
Modified: 2011-12-10 12:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2010-10-16 13:27:02 UTC
Version:           4.5 (using KDE 4.5.2) 
OS:                Linux

When I start KMyMoney, my scheduled paycheck transaction opens and requests confirmation to enter as it is set to "estimate that my change each time".  If I click "ignore" for the one transaction, all subsequent schedules are also ignored.

Reproducible: Always

Steps to Reproduce:
Start KMM with a scheduled transaction that requires confirmation before entering
Select "ignore"


Actual Results:  
The Scheduled Transaction process is aborted

Expected Results:  
The single transaction should have been ignored but all other scheduled transactions should have been processed

OS: Linux (i686) release 2.6.32.24-pclos1.bfs
Compiler: gcc
Comment 1 Cristian Oneț 2011-12-10 12:05:59 UTC
Git commit 9250c94d3d8df241ac95650a9584dd246437d008 by Cristian Oneț.
Committed on 10/12/2011 at 13:00.
Pushed by conet into branch 'master'.

When entering schedules at startup if the current schedule was ignored
then we must make sure that the user can still enter the next scheduled
transaction.

BUG: 254363

M  +4    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/9250c94d3d8df241ac95650a9584dd246437d008
Comment 2 Cristian Oneț 2011-12-10 12:06:33 UTC
Git commit fb48039ebee913c6d760147574b873cee92a7390 by Cristian Oneț.
Committed on 10/12/2011 at 13:00.
Pushed by conet into branch '4.6'.

When entering schedules at startup if the current schedule was ignored
then we must make sure that the user can still enter the next scheduled
transaction.

BUG: 254363

M  +4    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/fb48039ebee913c6d760147574b873cee92a7390