When entering schedules at startup if the current schedule was ignored then we must make sure that the user can still enter the next scheduled transaction.

BUG: 254363